[package]
name = "cca"
version = "0.0.1"
edition = "2021"
author = ["The VirTEE Authors <virtee-security@redhat.com>"]
description = "Library for ARM CCA"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
kvm-bindings = { git = "https://github.com/virtee/kvm-bindings", branch = "add_bindings_for_realms" }
kvm-ioctls =  { git = "https://github.com/virtee/kvm-ioctls", branch = "cca" }
libc = "0.2.154"
vmm-sys-util = "0.12.1"
